[tool.poetry]
name = "goog-stats"
version = "0.1.0"
description = ""
authors = ["Yash Jagdale <jagdale0210@gmail.com>"]
readme = "README.md"
packages = [{include = "goog_stats"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
