[tool.poetry]
name = "goog-stats"
version = "0.1.0"
description = ""
authors = ["Yash Jagdale <jagdale0210@gmail.com>"]
readme = "README.md"
packages = [{include = "goog_stats"}]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10.8"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
