[tool.poetry]
name = "goog-stats"
version = "0.1.1"
description = ""
authors = ["Yash Jagdale <jagdale0210@gmail.com>"]
readme = "README.md"
packages = [{include = "goog_stats"}]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10.8"
requests = "^2.28.1"
typer = "^0.7.0"
pathlib = "^1.0.1"
logging = "^0.4.9.6"
pyyaml = "^6.0"



[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
